fix: replace Thread.ofVirtual() with daemon thread for Java 17 compatibility
Thread.ofVirtual() is a Java 21 API — CI matrix includes Java 17.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>